force-app/main/default/objects/Booking_Audit__c/Booking_Audit__c.object-meta.xml
<CustomObject>
    <description>SOX object - Custom field history tracking for Booking</description>
    <label>Booking Audit</label>
    <nameField>
        <displayFormat>BAT-{00000000}</displayFormat>
        <label>Booking Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>