force-app/main/default/objects/Booking_Audit__c/fields/Booking_Field__c.field-meta.xml
<CustomField>
    <fullName>Booking_Field__c</fullName>
    <label>Booking Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>