force-app/main/default/objects/Booking_Audit__c/fields/Booking_Modified__c.field-meta.xml
<CustomField>
    <fullName>Booking_Modified__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Modified</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Booking Audits</relationshipLabel>
    <relationshipName>Booking_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>