force-app/main/default/objects/Booking_Audit__c/fields/Date_modified__c.field-meta.xml
<CustomField>
    <fullName>Date_modified__c</fullName>
    <label>Date modified</label>
    <type>DateTime</type>
</CustomField>